most of the layout is positioned

--- a/src/CSS/side_nav.css
+++ b/src/CSS/side_nav.css
@@ -1,5 +1,5 @@
 .sidenav {
-  height: 100%;
+  height: 78%;
   width: 160px;
   position: fixed;
   z-index: 1;
@@ -9,6 +9,7 @@
   justify-items: start;
   padding: 2rem 3rem;
   background-color: #111;
+  border-right: 1px solid rgb(26, 26, 26);
   overflow-x: hidden;
 }
 
