--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   display: grid;
+  background-color: #111;
 }
 
 .App-header {
@@ -17,15 +18,21 @@
 .App-link {
   color: #61dafb;
 }
+.containerOfRows {
+  display: grid;
+  height: 100vh;
+}
 .topRow {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-evenly;
-  margin: 9rem 0 0 16rem;
+  grid-gap: 2rem;
+  margin: 6rem 2rem 0 18rem;
 }
 .bottomRow {
-  display: flex;
+  display: grid;
 
-  margin: 6rem 0 0 16rem;
+  margin: 3rem 2rem 3rem 18rem;
 
-  border: 1px solid black;
+  border: 1px solid white;
 }
