--- a/src/CSS/avgR.css
+++ b/src/CSS/avgR.css
@@ -1,5 +1,8 @@
 .average {
-  border: 1px solid white;
+  /* border: 2px solid white; */
+  background-color: #111;
+
+  box-shadow: 0 0 15px 5px rgb(54, 54, 54);
   padding: 2rem;
   color: white;
 }
