--- a/src/CSS/sentiment.css
+++ b/src/CSS/sentiment.css
@@ -1,5 +1,8 @@
 .sentiment {
-  border: 1px solid white;
+  /* border: 2px solid white; */
+  box-shadow: 0 0 15px 5px rgb(54, 54, 54);
+  background-color: #111;
+
   padding: 2rem;
   color: white;
 }
