--- a/src/CSS/side_nav.css
+++ b/src/CSS/side_nav.css
@@ -1,14 +1,15 @@
 .sidenav {
-  height: 78%;
+  height: 70.5%;
   width: 160px;
   position: fixed;
   z-index: 1;
-  top: 0;
-  left: 0;
+  top: 6rem;
+  left: 2rem;
   display: grid;
   justify-items: start;
-  padding: 2rem 3rem;
+  padding: 2rem 2rem;
   background-color: #111;
+  box-shadow: 0 0 15px 5px rgb(54, 54, 54);
   border-right: 1px solid rgb(26, 26, 26);
   overflow-x: hidden;
 }
@@ -16,11 +17,14 @@
 .sidenav a {
   padding: 12px 8px 6px 16px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: bold;
   color: #818181;
   display: block;
 }
 
 .sidenav a:hover {
   color: #f1f1f1;
+  font-size: 18px;
+  font-weight: bold;
 }
