edit background colors and image

--- a/src/CSS/avgR.css
+++ b/src/CSS/avgR.css
@@ -1,6 +1,6 @@
 .average {
   /* border: 2px solid white; */
-  background-color: #111;
+  background-color: rgb(10, 10, 10);
 
   box-shadow: 0 0 15px 5px rgb(54, 54, 54);
   padding: 2rem;
