--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   display: grid;
   background-color: #111;
   background-image: url('./Images/component_bg.jpeg');
-  background-repeat: repeat;
-  background-size: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App-header {
