--- a/src/CSS/sentiment.css
+++ b/src/CSS/sentiment.css
@@ -1,7 +1,7 @@
 .sentiment {
   /* border: 2px solid white; */
   box-shadow: 0 0 15px 5px rgb(54, 54, 54);
-  background-color: #111;
+  background-color: rgb(10, 10, 10);
 
   padding: 2rem;
   color: white;
