--- a/src/CSS/websiteVisitors.css
+++ b/src/CSS/websiteVisitors.css
@@ -2,7 +2,7 @@
   color: white;
   /* border: 2px solid white; */
   box-shadow: 0 0 15px 5px rgb(54, 54, 54);
-  background-color: #111;
+  background-color: rgb(10, 10, 10);
 
   padding: 2rem;
 }
