--- a/src/CSS/websiteVisitors.css
+++ b/src/CSS/websiteVisitors.css
@@ -2,13 +2,32 @@
   color: white;
   /* border: 2px solid white; */
   box-shadow: 0 0 15px 5px rgb(54, 54, 54);
-  background-color: rgb(10, 10, 10);
+  background-color: rgb(26, 26, 26);
 
-  padding: 2rem;
+  padding-bottom: 5rem;
 }
 .visitor_text {
   display: flex;
+  justify-content: flex-start;
+  padding: 1rem;
 }
+
 .visitor_count {
   display: flex;
+  justify-content: flex-end;
+  padding-left: 3rem;
+
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  /* font-weight: bold; */
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px rgb(54, 54, 54);
+}
+.graph {
+  background-image: url('../Images/visitor_graph.png');
+  background-size: cover;
+  background-repeat: round;
+  height: 90%;
+  width: 100%;
 }
